istio-sample.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatosistio
  labels:
    app: whatosistio
spec:
  ports:
  - port: 8080
    targetPort: 8081
    name: http
  selector:
    app: whatosistio
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whatosistio-v1
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: whatosistio
        version: v1
    spec:
      containers:
      - name: whatosistio
        image: bjd145/whatos:latest 
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: whatosistio-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whatosistio
spec:
  hosts:
  - "os.denicolafamily."
  http:
    route:
    - destination:
        host: whatosistio
        subset: v1
