istio-ssl.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatosistio
  labels:
    app: whatosistio
spec:
  ports:
  - port: 8081
    name: http
  selector:
    app: whatosistio
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whatosistio-v1
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: whatosistio
        version: v1
    spec:
      containers:
      - name: whatosistio
        image: bjd145/whatos:1.0 
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8081
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whatosistio-v2
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: whatosistio
        version: v2
    spec:
      containers:
      - name: whatosistio
        image: bjd145/whatos:2.0 
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8081
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: whatosistio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
       number: 443
       name: https
       protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
     - "whatos.denicolafamily.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whatosistio
spec:
  hosts:
  - "whatos.denicolafamily.com"
  gateways:
  - whatosistio-gateway
  http:
  - match:
    - uri:
        exact: /api/os
    route:
    - destination:
        host: whatosistio
        port:
          number: 8081
