istio-weightedrules.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatosistio
  labels:
    app: whatosistio
spec:
  ports:
  - port: 8081
    name: http
  selector:
    app: whatosistio
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whatosistio-v1
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: whatosistio
        version: v1
    spec:
      containers:
      - name: whatosistio
        image: bjd145/whatos:1.0 
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whatosistio-v2
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: whatosistio
        version: v2
    spec:
      containers:
      - name: whatosistio
        image: bjd145/whatos:2.0 
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: whatosistio-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whatosistio-route
spec:
  hosts:
  - "whatosistio.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: whatosistio.default.svc.cluster.local
        subset: v2
      weight: 25
    - destination:
        host: whatosistio.default.svc.cluster.local
        subset: v1
      weight: 75
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: whatosistio-destination
spec:
  host: whatosistio.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      app: whatosistio
      version: v1
  - name: v2
    labels:
      app: whatosistio
      version: v2
